[package]
name = "metro"
version = "0.1.0"
authors = ["Paul Maynard <Paul.Maynard001@umb.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.19.3"
crossbeam-utils = "0.8.4"
rand = "0.8.3"
nalgebra = "0.26.2"
approx = "0.4.0"
