[package]
name = "metro"
version = "0.1.0"
authors = ["Paul Maynard <Paul.Maynard001@umb.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.19.3"
rayon = "1.5.0"
lazy_static = "1.4.0"
rand = "0.8.3"
rand_distr = "0.4.0"
nalgebra = "0.26.2"
approx = "0.4.0"
